apps/downloads/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: downloads
  labels:
    app: jackett
    app.kubernetes.io/name: jackett
    app.kubernetes.io/instance: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
        app.kubernetes.io/name: jackett
        app.kubernetes.io/instance: jackett
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:0.24.1905
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
        - name: tun-device
          hostPath:
            path: /dev/net/tun
            type: CharDevice
